# potato-trading-bot

./: .env.binance.example  .env.example  .gitignore  BOT-02_IMPLEMENTATION_SUMMARY.md  CI_NOTES.md  CLAUDE.md  Claude_ai-trading-bot-review.md  DEVELOPMENT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  PAPER_TRADING.md  README.md  SETUP.md  config_paper.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_data_BTCUSDT.csv
.claude/: settings.json
.github/workflows/: ci.yml  pr-checks.yml
backtest_results/: backtest_rsi_BTCUSDT_20251027_234219.json  equity_curve.csv  trades.csv
bot/: __init__.py  cli.py
bot/ai/: ai_trend_predictor.py  llm_manager.py
bot/ai/prompts/: README.md  __init__.py  base.py  guardrails.py  schemas.py  trading.py
bot/config/: models.py
bot/config/profiles/: dev.yaml  paper.yaml  prod.yaml
bot/core/: README_LOGGING.md  README_STRATEGY.md  logging_config.py  strategy.py  strategy_context.py  technical_analyzer.py
bot/core/examples/: strategy_example.py
bot/data/: README.md  __init__.py  backtesting.py  market_data.py  quality_monitor.py
bot/data/examples/: market_data_example.py
bot/execution/: __init__.py  orchestrator.py  paper_trading.py
bot/execution/adapters/: README.md  __init__.py  binance.py  simulated.py
bot/interfaces/: exchange.py
bot/risk/: README.md  __init__.py  emergency_stop.py  notifications.py  risk_manager.py
bot/risk/examples/: risk_manager_example.py
config/examples/: llm_config.yaml  risk_config.yaml
data/: get_historical_data.py
examples/: logging_demo.py
scripts/: README.md  check.sh  import_to_vibe_kanban.py  quick-check.sh  setup_dev.sh  test-binance-connection.py
tests/: __init__.py  test_emergency_stop.py  test_notifications.py
tests/integration/: test_phase2_smoke.py
tests/integration/data/: __init__.py  test_market_data_integration.py
tests/integration/execution/: __init__.py
tests/integration/execution/adapters/: __init__.py  test_binance_integration.py
tests/unit/core/: test_logging_config.py  test_strategy.py  test_technical_analyzer.py
tests/unit/data/: __init__.py  test_market_data.py  test_quality_monitor.py
tests/unit/execution/: __init__.py  test_orchestrator.py
tests/unit/execution/adapters/: __init__.py  test_binance.py
tests/unit/risk/: __init__.py  test_risk_manager.py
