[project]
name = "ai-trading-bot"
version = "0.1.0"
description = "AI-enhanced cryptocurrency trading bot with multi-agent LLM system"
authors = [{name = "Trading Bot Team"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "ccxt>=4.1.0",
    "ta>=0.11.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.1",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "praw>=7.7.1",
    "feedparser>=6.0.10",
    "prometheus-client>=0.19.0",
    "python-telegram-bot>=20.7",
    "structlog>=23.2.0",
    "asyncio>=3.4.3",
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
]

ui = [
    "PySide6>=6.6.0",
]

[project.scripts]
bot = "bot.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from within except (too noisy)
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "ta.*",
    "praw.*",
    "feedparser.*",
    "stable_baselines3.*",
    "pyarrow.*",
    "pandas.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short --timeout=30 -m 'not integration'"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselected by default)",
]

[tool.coverage.run]
source = ["bot"]
omit = [
    "*/tests/*",
    "*/interfaces/dashboard/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
